--- a/source/familyAccount/index.html
+++ b/source/familyAccount/index.html
@@ -9,6 +9,7 @@
 		<meta name="format-detection" content="telephone=yes" />
 		<meta name="msapplication-tap-highlight" content="no" />
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge，chrome=1">
+		<link rel="icon" type="image/png" href="/favicon.png" />
 		<title>亲情账号</title>
   </head>
   <body bgcolor="#F6D4B4">
