--- a/source/be_invited_1/index.html
+++ b/source/be_invited_1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
-    <title>inviterSubscribe</title>
+    <title>恭喜您成功预约领取奖励</title>
   </head>
   <body>
     <div id="app"></div>
