--- a/source/invited/index.html
+++ b/source/invited/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
-    <title>inviter</title>
+    <title>邀请好友免费换电</title>
   </head>
   <body>
     <div id="app"></div>
@@ -27,6 +27,8 @@
         document.addEventListener('gesturestart', function (event) {
           event.preventDefault();
         });
+      
       }
+     
   </script>
 </html>
