--- a/source/questionnaire/index.html
+++ b/source/questionnaire/index.html
@@ -12,7 +12,7 @@
   <meta name="msapplication-tap-highlight" content="no" />
   <meta http-equiv="X-UA-Compatible" content="IE=Edge，chrome=1">
   <link rel="icon" type="image/png" href="/favicon.png" />
-  <title>押金退还原因（多选）</title>
+  <title>押金退还原因（可多选）</title>
 </head>
 
 <body>
