--- a/source/appointmentSuccess/index.html
+++ b/source/appointmentSuccess/index.html
@@ -11,7 +11,7 @@
     <meta name="msapplication-tap-highlight" content="no" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge，chrome=1">
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <title>买超级电池免费充电</title>
+    <title>我的预约</title>
   </head>
   <body>
     <div id="app"></div>
