--- a/source/appointmentSuccess/index.html
+++ b/source/appointmentSuccess/index.html
@@ -12,6 +12,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge，chrome=1">
     <link rel="icon" type="image/png" href="/favicon.png" />
     <title>我的预约</title>
+    <script src="https://imgcn.immotor.com/thilina/lodash.ili.js?v=1.5.9"></script>
   </head>
   <body>
     <div id="app"></div>
