--- a/source/customerService/static/frame/pages/service.html
+++ b/source/customerService/static/frame/pages/service.html
@@ -14,7 +14,7 @@
         <div class="guideHeader">客服</div>
         <div class="content">
             <div>
-                客服热线：0755-27787220、0755-27783095，服务时间 9:00-21:30。<br/>
+                客服热线：0755-27787220、0755-27783095，服务时间 7*24小时。<br/>
                 如您有任何疑问，请于服务时间内拨打客服热线，我们将竭诚为您服务。其他时间段请在微信公众号留言人工客服，上班后会及时给您回复。<br/>
                 如您不便接听语音电话或进行语音沟通，欢迎发送您的问题至客服邮箱：service@immotor.com，或关注我们的微信公众号在线咨询：e-huandian。
             </div>
