--- a/source/customerService/static/frame/pages/swapFail.html
+++ b/source/customerService/static/frame/pages/swapFail.html
@@ -15,20 +15,7 @@
         <div class="content">
             <div class="content:header">1. 未检测到电池</div>
             <div class="content">换一颗电池时，当放入的电池没有检测到，屏幕会提示“未检测到电池”，仓门会再一次打开，此时请取出电池，关上仓门，重新预约电池柜或扫码打开另一个仓门，切勿第二次放入仓内关上仓门，避免电池被吞。</div>
-            <div class="content">换两颗电池时，分4种情况：</div>
-            <ul class="subItem" type="disc">
-                <li>情况1.两颗电池按照步骤依次更换成功；</li>
-                <li>情况2.第一颗电池更换失败，第二颗更换成功；<br/>
-                    第一颗电池放入仓内关上仓门后，屏幕提示未检测到电池，仓门打开，此时请取出该电池，并放入另一颗需更换的电池并关上仓门，切勿自行调整第一颗电池的位置、角度重新关上仓门，避免电池被吞。第二颗电池更换成功后，请重新预约或扫描电池柜二维码，更换第一颗电池；
-                </li>
-                <li>情况3.第一颗电池更换成功，第二颗更换失败；<br/>
-                    第二颗电池放入仓内关上仓门后，屏幕提示未检测到电池，仓门打开，此时请取出电池，并关上仓门，重新预约或扫描电池柜二维码，更换第二颗电池；
-                </li>
-                <li>情况4.两颗电池更换全部失败；<br/>
-                    第一颗电池放入仓内关上仓门后，屏幕提示未检测到电池，仓门打开，此时请取出该电池，并放入另一颗需更换的电池并关上仓门，屏幕再次提示未检测到电池，仓门再次打开，此时请取出电池，关上仓门，重新预约或扫描电池柜二维码，更换电池；
-                </li>
-            </ul>
-            <div class="content-highlight">提示： 如果换电失败或者电池被吞，切勿自行按压仓门试图打开取出电池，此时应联系运维人员请求帮助，并提供被吞电池仓号及电池SN码。任何其他特殊情况请联系运维人员。</div>
+            <div class="content-highlight">提示：如果换电失败或者电池被吞，请先别着急，也不要强行撬开仓门。换电柜吞电池自取方法：点击换电柜屏幕的“帮助中心”--“取被吞电池”-输入注册e换电手机号码-等待柜子弹开被吞电池(注：请在被吞10分钟内尽快操作，过了时效需要联系客服热线075527787220处理)。</div>
         </div>
         <div class="content">
             <div class="content:header">2. 电池身份验证失败</div>
