--- a/release/SIT/customerService/static/frame/pages/package.html
+++ b/release/SIT/customerService/static/frame/pages/package.html
@@ -13,17 +13,21 @@
     <body>
         <div class="guideHeader">套餐</div>
         <div class="content">
-            <div>1. 套餐类别</div>
+            <div>1. 套餐有效期</div>
             <ul class="subItem" type="disc">
-                <li>结合不同地区的实际情况，我们提供的套餐有所差异，后续按照用户使用情况可再做调整。</li>
+                <li>套餐时间按照30天计算的。例如：在2018年1月18日购买了套餐，无论套餐内换电次数用完与否，都将在2018年2月16日24时到期清零。</li>
             </ul>
         </div>
         <div class="content">
-            <div>2. 套餐购买/续费</div>
+            <div>2. 颗数计算方式</div>
             <ul class="subItem" type="disc">
-                <li>用户选择相应套餐后即可支付金额享受e换电服务，支付时优先使用钱包余额支付，如钱包余额不足，可选择使用微信支付或支付宝任意一种方式支付。套餐一旦确定支付后不可退款或更改套餐；</li>
-                <li>月套餐的时间是按照30天计算的。例如：在2018年1月18日购买了月套餐，无论套餐内换电次数用完与否，都将在2018年2月16日24时到期清零；</li>
-                <li>换电次数按电池颗数计算，例如：更换1颗电池消耗1次，更换2颗电池消耗2次；</li>
+                <li>换电次数按电池颗数计算，例如：更换1颗电池消耗1次，更换2颗电池消耗2次；按用户协议，套餐发生购买后是不退不换，请考虑好后选择对应套餐进行使用。</li>
+            </ul>
+        </div>
+        <div class="content">
+            <div>3. 多买的套餐时间计算</div>
+            <ul class="subItem" type="disc">
+                <li>如果您有正在使用并且未到期的套餐，多购买的套餐，会等您现在在用的套餐到期后，新套餐会自动续上，在APP-我的-套餐可以查看待生效的套餐。</li>
             </ul>
         </div>
     </body>
