--- a/release/SIT/customerService/static/frame/pages/returnBattery.html
+++ b/release/SIT/customerService/static/frame/pages/returnBattery.html
@@ -14,8 +14,10 @@
         <div class="guideHeader">怎么退电池</div>
         <div class="content">
           <ul class="subItem" type="disc">
-              <li>将电池及中控（电池仓底座），一起退还到附近任意一个指定的电池退还站点。</li>
-              <li>您可以打开e换电APP，在左侧菜单栏“服务网点-->电池退还站点”中查看当前城市中的指定退还站点。</li>
+              <li>第1步：将电池和中控（电池仓底座）退还到指定的网点（ APP-我的-服务网点-退还电池网点-指定的服务网点）。</li>
+              <li>第2步：退到APP指定网点后，会有工作人员核实电池退回，预计1个工作日会将电池从你名下消除，请耐心等待。查看电池消除方法：APP-我的电池看是否为空白。</li>
+              <li>第3步：电池编码显示空白后，可在APP-我的-钱包-押金-申请退款。</li>
+              <li>第4步：退款金额会原路返回最初在APP上支付的账户，到账时间以对应银行或第三方的退款时间为准，预计时间是1-7个工作日。如果押金是转给其他人，请直接联系他人退回押金。</li>
           </ul>
         </div>
     </body>
