客服页面更改

--- a/release/SIT/customerService/static/frame/pages/bleIssues.html
+++ b/release/SIT/customerService/static/frame/pages/bleIssues.html
@@ -19,7 +19,7 @@
                 <li>将电池拔插一次，然后等5分半钟；</li>
                 <li>退出手机的e换电APP，然后重新打开；</li>
                 <li>打开自己手机的蓝牙，拔插电池；</li>
-                <li>APP中进入“我的”-“我的车辆”等5秒；</li>
+                <li>APP中进入“我”-“常用功能”-“我的车辆”等5秒；</li>
                 <li>点击设置，在新界面刷出版本号-点击固件更新-等升级就行；</li>
                 <li>没有刷出版本号，就退出到地图界面，重新进入我的车辆再试一次；</li>
                 <li>如果还不行更换华为/苹果机登陆账户升级，如果还不行联系车行更换下中控。</li>
