--- a/release/SIT/customerService/static/frame/pages/depositCharge.html
+++ b/release/SIT/customerService/static/frame/pages/depositCharge.html
@@ -14,7 +14,7 @@
         <div class="guideHeader">押金充值</div>
         <div class="content">首次注册用户需在e换电APP服务网点相应城市的车行进行改装或购买新车后激活用户手机号码才可缴纳押金。电池押金可以通过下面两种方式中的任意一种方式支付：</div>
         <div class="content">（1）通过代理商支付押金，具体支付方式可以跟代理商协商。</div>
-        <div class="content">（2）通过e换电app支付押金。注册登录后，在首页点击左上角的按钮，点击“我的电池” --> “租借电池” --> 选择租借电池数量 --> 支付。</div>
+        <div class="content">（2）通过e换电app支付押金。注册登录后，在首页点击左上角的按钮，点击“我” -->“电池” --> “租借电池” --> 选择租借电池数量 --> 支付。</div>
         <div align="center">
             <img src="../src/depositCharge.png" width="150" height="262">
         </div>
