--- a/release/SIT/customerService/static/frame/pages/swapWrongBattery.html
+++ b/release/SIT/customerService/static/frame/pages/swapWrongBattery.html
@@ -16,7 +16,7 @@
             请关注“e换电”微信公众号，发送“人工”，将拿错的电池底部的条形码复制编码发送给在线客服，我们查询对应的号码，您联系交换回来。
         </div>
         <div class="content">
-            “APP”-“我的”-“电池”可以查看属于自己的电池编码与实物电池编码对照，核对那颗电池是属于自己的进行交换。
+            “APP”-“我”-“电池”可以查看属于自己的电池编码与实物电池编码对照，核对那颗电池是属于自己的进行交换。
         </div>
     </body>
 </html>
