--- a/source/customerService/static/frame/pages/package.html
+++ b/source/customerService/static/frame/pages/package.html
@@ -27,7 +27,7 @@
         <div class="content">
             <div>3. 多买的套餐时间计算</div>
             <ul class="subItem" type="disc">
-                <li>如果您有正在使用并且未到期的套餐，多购买的套餐，会等您现在在用的套餐到期后，新套餐会自动续上，在APP-我的-套餐可以查看待生效的套餐。</li>
+                <li>如果您有正在使用并且未到期的套餐，多购买的套餐，会等您现在在用的套餐到期后，新套餐会自动续上，在APP-我-套餐可以查看待生效的套餐。</li>
             </ul>
         </div>
     </body>
