--- a/source/customerService/static/frame/pages/changePhone.html
+++ b/source/customerService/static/frame/pages/changePhone.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <div class="guideHeader">咨询更改号码：</div>
+        <div class="guideHeader">如何更改号码？</div>
         <div class="content">
             <ul class="subItem" type="disc">
                 <li>亲，请关注 "e换电"微信公众号，发送“人工”2个字，转接人工客服，并描述您的问题 ，按要求提供资料，人工客服核实后会处理。</li>
