修改充值路径

--- a/release/SIT/customerService/static/frame/pages/charge.html
+++ b/release/SIT/customerService/static/frame/pages/charge.html
@@ -15,7 +15,7 @@
         <div class="content">
             <div class="content:header">1. 如何充值</div>
             <ul class="subItem" type="disc">
-                <li>在e换电APP首页点击右上角的按钮 --> 进入“我的钱包” --> 点击“去充值” --> 选择要充值的类别及支付方式 --> 点击“立即支付”完成支付。</li>
+                <li>在e换电APP点击“我” --> 点击“钱包” --> 点击“去充值” --> 选择要充值的类别及支付方式 --> 点击“立即支付”完成支付。</li>
             </ul>
         </div>
     </body>
