车辆更新路径

--- a/release/SIT/customerService/static/frame/pages/fwUpgrade.html
+++ b/release/SIT/customerService/static/frame/pages/fwUpgrade.html
@@ -12,7 +12,7 @@
 
     <body>
         <div class="guideHeader">中控固件升级</div>
-        <div class="content">打开车辆油门锁（用车钥匙，非中控），放入电池，开启手机蓝牙和网络进入e换电APP（“我”-“我的车辆” –“设置”  -“固件更新”），点击下载固件更新安装包，下载完成后，点击固件升级。升级过程中请勿退出APP当前升级界面，并不要远离车辆，等待固件更新成功后（成功后会发出蜂鸣声持续1-2分钟），退出e换电APP再进入检查固件版本确认是否升级成功即可。</div>
+        <div class="content">打开车辆油门锁（用车钥匙，非中控），放入电池，开启手机蓝牙和网络进入e换电APP（“我”-“常用功能”-“我的车辆”–“设置”-“固件更新”），点击下载固件更新安装包，下载完成后，点击固件升级。升级过程中请勿退出APP当前升级界面，并不要远离车辆，等待固件更新成功后（成功后会发出蜂鸣声持续1-2分钟），退出e换电APP再进入检查固件版本确认是否升级成功即可。</div>
         <div class="content">操作流程图如下：</div>
         <div align="center">
             <img src="../src/fwUpgrade.png" width="300" height="300">
