--- a/release/SIT/customerService/static/frame/pages/package.html
+++ b/release/SIT/customerService/static/frame/pages/package.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <div class="guideHeader">套餐</div>
+        <div class="guideHeader">套餐相关问题</div>
         <div class="content">
             <div>1. 套餐有效期</div>
             <ul class="subItem" type="disc">
