--- a/release/SIT/customerService/static/frame/pages/scooterLocationIssues.html
+++ b/release/SIT/customerService/static/frame/pages/scooterLocationIssues.html
@@ -11,7 +11,7 @@
     </head>
     
     <body>
-        <div class="guideHeader">中控</div>
+        <div class="guideHeader">定位/电量不更新</div>
         <div class="content">
             不是新固件则先升级（方法参考栏目车辆固件升级），同时将车辆移至户外稍微空旷的地方；
         </div>
