--- a/release/SIT/customerService/static/frame/pages/swapSystemError.html
+++ b/release/SIT/customerService/static/frame/pages/swapSystemError.html
@@ -11,7 +11,7 @@
     </head>
     
     <body>
-        <div class="guideHeader">换电异常</div>
+        <div class="guideHeader">app提示系统繁忙，怎么办？</div>
         <div class="content">
             请重启下手机或退出账户重新登录，如果依旧提示系统繁忙，卸载APP后重新下载。
         </div>
