--- a/release/SIT/customerService/static/frame/pages/swallowBattery.html
+++ b/release/SIT/customerService/static/frame/pages/swallowBattery.html
@@ -11,7 +11,7 @@
     </head>
     
     <body>
-        <div class="guideHeader">换电异常</div>
+        <div class="guideHeader">电池被吞怎么办？</div>
         <div class="content">
             请先别着急，吞电池客户自己处理方法：点击屏幕的帮助中心--取被吞电池-输入注册e换电手机号码-等待柜子弹开被吞电池(注：请在被吞10分钟内尽快操作，过了时效需要联系客服处理了)。
         </div>
