--- a/release/SIT/customerService/static/frame/pages/swapBatteryOffline.html
+++ b/release/SIT/customerService/static/frame/pages/swapBatteryOffline.html
@@ -11,12 +11,12 @@
     </head>
     
     <body>
-        <div class="guideHeader">换电异常</div>
+        <div class="guideHeader">离线换电怎么操作？</div>
         <div class="content">
             您好，柜子没有网络，并且在显示屏上有显示“网络跑丢了，点击使用离线换电”的提示，可以进行离线换电哦。
         </div>
         <div class="content">
-            操作步骤：“APP”- “我”- “常用功能”-“离线换电”- “离线教程”，先熟悉教程再换电。
+            操作步骤：APP-“我”-“常用功能”-“离线换电”- “离线教程”，先熟悉教程再换电。
         </div>
     </body>
 </html>
