--- a/source/customerService/static/frame/pages/getBattery.html
+++ b/source/customerService/static/frame/pages/getBattery.html
@@ -17,6 +17,6 @@
         <div align="center">
             <img src="../src/bindBattery.png" width="150" height="266">
         </div>
-        <div class="content-highlight">备注：成都用户如需领取第二颗电池可以在e换电APP左侧菜单栏中点击“服务网点-->退还电池网点-->易马达服务中心”领取。</div>
+        <div class="content-highlight">备注：成都用户如需领取第二颗电池可以在e换电APP左侧菜单栏中点击“服务网点-退还电池网点-易马达服务中心”领取。</div>
     </body>
 </html>
