--- a/source/customerService/static/frame/pages/returnBattery.html
+++ b/source/customerService/static/frame/pages/returnBattery.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <div class="guideHeader">怎么退电池</div>
+        <div class="guideHeader">怎么退电池？</div>
         <div class="content">
           <ul class="subItem" type="disc">
               <li>第1步：将电池和中控（电池仓底座）退还到指定的网点（APP-我-服务网点-退还电池网点-指定的服务网点）。</li>
