--- a/source/customerService/static/frame/pages/scooteHorn.html
+++ b/source/customerService/static/frame/pages/scooteHorn.html
@@ -11,7 +11,7 @@
     </head>
     
     <body>
-        <div class="guideHeader">中控</div>
+        <div class="guideHeader">车喇叭一直叫怎么办？</div>
         <div class="content">
            <div class="content"> 车发出声音，有三种原因</div>
                 <ul class="subItem" type="disc">
