--- a/source/customerService/static/frame/pages/swapBattery.html
+++ b/source/customerService/static/frame/pages/swapBattery.html
@@ -16,7 +16,7 @@
         <div align="center">
             <img src="../src/swapBattery1.png" width="150" height="260">
         </div>
-        <div class="content">用户也可以不预约，根据定位走到附近的电池柜，点击e换电APP首页下方的“扫码换电” --> 对准电池柜屏幕的二维码扫描 --> 选择“换电池” --> 选择换几颗后余下步骤与上述换电方法相同。</div>
+        <div class="content">用户也可以不预约，根据定位走到附近的电池柜，点击e换电APP首页下方的“扫码换电”-对准电池柜屏幕的二维码扫描-选择“换电池-选择换几颗后余下步骤与上述换电方法相同。</div>
         <div align="center">
             <img src="../src/swapBattery2.png" width="150" height="260">
         </div>
