--- a/source/customerService/static/frame/pages/swapFail.html
+++ b/source/customerService/static/frame/pages/swapFail.html
@@ -15,7 +15,7 @@
         <div class="content">
             <div class="content:header">1. 未检测到电池</div>
             <div class="content">换一颗电池时，当放入的电池没有检测到，屏幕会提示“未检测到电池”，仓门会再一次打开，此时请取出电池，关上仓门，重新预约电池柜或扫码打开另一个仓门，切勿第二次放入仓内关上仓门，避免电池被吞。</div>
-            <div class="content-highlight">提示：如果换电失败或者电池被吞，请先别着急，也不要强行撬开仓门。换电柜吞电池自取方法：点击换电柜屏幕的“帮助中心”--“取被吞电池”-输入注册e换电手机号码-等待柜子弹开被吞电池(注：请在被吞10分钟内尽快操作，过了时效需要联系客服热线075527787220处理)。</div>
+            <div class="content-highlight">提示：如果换电失败或者电池被吞，请先别着急，也不要强行撬开仓门。换电柜吞电池自取方法：点击换电柜屏幕的“帮助中心”-“取被吞电池”-输入注册e换电手机号码-等待柜子弹开被吞电池(注：请在被吞10分钟内尽快操作，过了时效需要联系客服热线075527787220处理)。</div>
         </div>
         <div class="content">
             <div class="content:header">2. 电池身份验证失败</div>
