--- a/release/SIT/QiuJi_Gerry/WuHan/index.html
+++ b/release/SIT/QiuJi_Gerry/WuHan/index.html
@@ -53,17 +53,17 @@
         <div class="autumn_buy relative">
             <img class="relative" src="./images/zhongqiu@2x(2).png" alt="">
             <div class="now_buy1 absolute">
-                <a href="IMMOTOR://app-links/wallet">
+                <a href="IMMOTOR://app-links/buyPackage">
                     <img src="./images/buy@4x 2@2x.png" alt="">
                 </a>
             </div>
             <div class="now_buy1 now_buy2 absolute">
-                <a href="IMMOTOR://app-links/wallet">
+                <a href="IMMOTOR://app-links/buyPackage">
                     <img src="./images/buy@4x 2@2x.png" alt="">
                 </a>
             </div>
             <div class="now_buy1 now_buy3 absolute">
-                <a href="IMMOTOR://app-links/wallet">
+                <a href="IMMOTOR://app-links/buyPackage">
                     <img src="./images/buy@4x 2@2x.png" alt="">
                 </a>
             </div>
