--- a/source/batteryInsurance/index.html
+++ b/source/batteryInsurance/index.html
@@ -11,7 +11,7 @@
     <meta name="msapplication-tap-highlight" content="no" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge，chrome=1">
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <title>电池保险</title>
+    <title>我的保障</title>
   </head>
   <body>
     <div id="app"></div>
