--- a/release/SIT/1111Activity/static/rules.html
+++ b/release/SIT/1111Activity/static/rules.html
@@ -63,10 +63,10 @@
 
 <body>
   <p class="contentText textFont" style="margin-top:20px">活动期间，凡参与双十一瓜分百万免费换电天数，即默认您已阅读并同意本次活动规则，为保障您的合法权益，请在参与前仔细阅读活动规则：</p>
-  <p class="contentText textFont">1、如集齐五张“星卡”，可获得瓜分百分免费换电天数资格；</p>
+  <p class="contentText textFont">1、如集齐五张“星卡”，可获得瓜分百万免费换电天数资格；</p>
   <p class="contentText textFont">2、双十一当天上午10点开始，瓜分百万免费换电天数；</p>
   <p class="contentText textFont">3、活动所赠免费换电天数，在套餐结束后自动生效；</p>
-  <p class="contentText textFont">4、活动所获任意奖品，不退不折现，不可转让他人；</p>
+  <p class="contentText textFont">4、活动所获任何奖品，不退不折现，不可转让他人；</p>
   <p class="contentText textFont">5、单个账户最多可获瓜分百万免费换电天数一次；</p>
   <p class="contentText textFont">6、活动期间，若用户已有正在生效保险，则自动获取一张“水星卡”</p>
   <p class="contentText textFont">7、瓜分当天，如用户未参与瓜分，即默认放弃参与瓜分资格。</p>
